[gd_scene load_steps=4 format=3 uid="uid://dia88vntf81qk"]

[ext_resource type="Script" uid="uid://gmk2d1iuy8gr" path="res://scripts/ui/screens/GovernorsDesk/governors_desk_screen.gd" id="1_kgsrr"]
[ext_resource type="Script" uid="uid://b8uk1tq2juiks" path="res://scripts/ui/screens/GovernorsDesk/edit_village.gd" id="2_8xcpb"]
[ext_resource type="PackedScene" uid="uid://ur5n1tiyu2ei" path="res://scenes/ui/screens/GovernorsDesk/EditVillageNPCTemplate.tscn" id="2_nbsle"]

[node name="GovernorsDeskScreen" type="Control"]
custom_minimum_size = Vector2(1182, 642)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -591.0
offset_top = -321.0
offset_right = 591.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgsrr")
metadata/_custom_type_script = "uid://gmk2d1iuy8gr"

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(1182, 642)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -591.0
offset_top = -321.0
offset_right = 591.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 2
tabs_position = 1
clip_tabs = false

[node name="Settings" type="HBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Settings"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(1182, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 30
text = "Viilage Settings"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Settings/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Village Name"
fit_content = true

[node name="LineEdit" type="LineEdit" parent="TabContainer/Settings/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(680, 0)
layout_mode = 2

[node name="SaveButton" type="Button" parent="TabContainer/Settings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Add NPC" type="HBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Add NPC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Add NPC/MarginContainer"]
custom_minimum_size = Vector2(1182, 0)
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="TabContainer/Add NPC/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Pick an NPC"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="NPCsContainer" type="HBoxContainer" parent="TabContainer/Add NPC/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ApproveButton" type="Button" parent="TabContainer/Add NPC/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Approve"

[node name="Edit Village" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
script = ExtResource("2_8xcpb")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Edit Village"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Edit Village/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="RichTextLabel" parent="TabContainer/Edit Village/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 30
text = "Edit Village"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Edit Village/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 561)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Edit Village/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="NPCTemplate" parent="TabContainer/Edit Village/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_nbsle")]
layout_mode = 2
show_edit_button = false

[connection signal="pressed" from="TabContainer/Add NPC/MarginContainer/VBoxContainer/ApproveButton" to="." method="_on_approved"]
